modification catégories portfolio

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 									<article class="item">
 										<a href="https://www.youtube.com/watch?v=UKid32emixE" class="image fit"><img src="images/logoblue.png" alt="" /></a>
 										<header>
-											<h3>Webzine</h3>
+											<h3>Audiovisuel</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/logojuju.jpg" alt="" /></a>
 										<header>
-											<h3>Dessine-moi une région</h3>
+											<h3>Logotype</h3>
 										</header>
 									</article>
 								</div>
@@ -133,13 +133,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/IMGP0930.JPG" alt="" /></a>
 										<header>
-											<h3>Open International de Takwondo 2016 Proville</h3>
+											<h3>Photographie</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/dudu_flat_design.jpg" alt="" /></a>
 										<header>
-											<h3>Flat Design</h3>
+											<h3>Infographie</h3>
 										</header>
 									</article>
 								</div>
